experiments on multiple tasks

--- a/training/Trainer..ipynb
+++ b/training/Trainer..ipynb
@@ -78,13 +78,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "id": "0558881a",
       "metadata": {},
       "outputs": [],
       "source": [
         "# Classic: Import data and build dataloader\n",
-        "task_type = 'backflip'\n",
+        "availables_tasks = [\n",
+        "    'backflip', \n",
+        "    'spinkick', \n",
+        "  ]\n",
+        "\n",
+        "task_type = availables_tasks[1]\n",
         "dataset_len = 6000\n",
         "import_dir = root_dir+'/data/'+ task_type + '/'\n",
         "raw_expert_observations = np.load(import_dir+'/expert-observations-'+str(dataset_len)+'.npy', allow_pickle=True)\n",
@@ -93,23 +98,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "c4fbe1d7",
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: '/home/leeoos/Projects/master/airo-rl/acrobatic-agents/data/mixed//expert-observations-6000.npy'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipykernel_19355/1124922752.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mtask_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'backflip'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mimport_dir_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mroot_dir\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'/data/'\u001b[0m\u001b[0;34m+\u001b[0m \u001b[0mtask_type\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'/'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mraw_expert_observations_bf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimport_dir_1\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'/expert-observations-'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset_len_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'.npy'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_pickle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mexpert_actions_bf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimport_dir_1\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'expert-actions-'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset_len_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'.npy'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_pickle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m~/miniconda3/envs/hum_rl/lib/python3.7/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    415\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    416\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 417\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    418\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    419\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/leeoos/Projects/master/airo-rl/acrobatic-agents/data/mixed//expert-observations-6000.npy'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#Experimental: Run this cell to train on both tasks\n",
         "task_type = 'mixed'\n",
@@ -137,17 +129,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "id": "dbe93baa",
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "['/home/leeoos/Projects/master/airo-rl/acrobatic-agents/data/scaler-mixed-6000.joblib']"
+              "['/home/leeoos/Projects/master/airo-rl/acrobatic-agents/data/scaler-spinkick-6000.joblib']"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -164,7 +156,7 @@
         "\n",
         "# This will save the scaler to a file named 'scaler.joblib'\n",
         "# joblib.dump(scaler, root_dir+'/data/scaler-'+str(dataset_len)+'.joblib') # TO FIX\n",
-        "joblib.dump(scaler, root_dir+'/data/scaler-mixed-'+str(dataset_len)+'.joblib')  \n",
+        "joblib.dump(scaler, root_dir+'/data/scaler-'+str(task_type)+'-'+str(dataset_len)+'.joblib')  \n",
         "\n",
         "\n",
         "# with open(root_dir+'/data/scaler-'+str(dataset_len)+'.joblib', 'wb') as file:\n",
@@ -181,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "id": "ce03945f",
       "metadata": {
         "id": "ce03945f"
@@ -223,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 10,
       "id": "11af5407",
       "metadata": {
         "colab": {
@@ -237,12 +229,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Expert actions len: 8000\n",
-            "Expert observations len: 8000\n",
+            "Expert actions len: 6000\n",
+            "Expert observations len: 6000\n",
             "Discarded form np: 0\n",
             "Discarded form torch: 0\n",
-            "Observations min: -31.86945343017578\n",
-            "Observations max: 26.806964874267578\n"
+            "Observations min: -15.00553035736084\n",
+            "Observations max: 12.126877784729004\n"
           ]
         }
       ],
@@ -290,10 +282,96 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "9af119be",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[ 4.14436495e-01  1.02551889e+00 -9.33313370e-03  6.07576370e-02\n",
+            "  3.34873646e-02  9.66245294e-01  2.46116519e-01  1.87930334e-02\n",
+            "  7.37810433e-02 -6.21104240e-02  3.19778323e-01  9.61959586e-02\n",
+            "  9.87413585e-01 -7.81291202e-02  5.81204966e-02  1.24628991e-01\n",
+            " -1.91437006e-02  5.66841483e-01  1.84849240e-02  9.33137715e-01\n",
+            " -1.34030133e-01  2.26172015e-01 -2.45226592e-01  3.90171409e-02\n",
+            " -2.47263491e-01  6.35911971e-02  9.59065318e-01  4.65109460e-02\n",
+            " -2.70830095e-01  6.84218556e-02  2.36377120e-02 -6.41423553e-01\n",
+            " -4.33100248e-03  9.48671758e-01  1.08236343e-01 -2.52580881e-01\n",
+            " -1.56555921e-01  5.76519966e-03 -8.69207054e-01 -4.54290733e-02\n",
+            "  9.45220709e-01  9.56256315e-02 -2.93601394e-01 -1.05886050e-01\n",
+            "  1.66150928e-02  5.37973404e-01  2.38145098e-01  3.43766272e-01\n",
+            " -4.77377594e-01  3.38462442e-01  7.34423995e-01  1.23890698e-01\n",
+            "  6.50636554e-01  1.02539770e-01  1.53239414e-01  1.87494129e-01\n",
+            " -5.54339290e-01 -7.96286106e-01  1.18864477e-01  6.97663307e-01\n",
+            " -2.81104855e-02  1.53239414e-01  1.87494129e-01 -5.54339290e-01\n",
+            " -7.96286106e-01  1.84733242e-01  1.19185328e-01 -1.12082288e-01\n",
+            "  5.44684768e-01  3.35341841e-01 -1.22929536e-01  7.58783698e-01\n",
+            "  4.58844781e-01  7.43025541e-02 -2.83331037e-01  8.94334316e-01\n",
+            "  3.40765119e-01  1.06980994e-01  2.69444495e-01  5.70305765e-01\n",
+            " -1.39449835e-02 -4.14599717e-01  7.34316051e-01 -5.33890687e-02\n",
+            " -1.06036037e-01  6.68345630e-01 -1.72520101e-01  4.45935607e-01\n",
+            " -2.24534646e-01  3.44887912e-01  6.48431778e-01  4.70893234e-01\n",
+            "  4.88721102e-01 -1.95748329e-01  5.96681237e-01 -2.95937449e-01\n",
+            "  1.39887646e-01 -7.81623125e-01  1.76831320e-01 -5.81573129e-01\n",
+            " -1.79947138e-01  7.21500754e-01 -2.36973941e-01  1.39887646e-01\n",
+            " -7.81623125e-01  1.76831320e-01 -5.81573129e-01  5.88340878e-01\n",
+            "  1.42586517e+00  1.05952156e+00 -5.69228935e+00  4.21137953e+00\n",
+            "  4.69144917e+00 -1.53110176e-01  1.68190706e+00  4.28518116e-01\n",
+            " -2.91961938e-01  4.24910021e+00  2.85990667e+00 -9.65395987e-01\n",
+            "  1.39569950e+00 -4.82336223e-01 -4.75133562e+00  4.21539688e+00\n",
+            "  1.35403788e+00  1.97904932e+00  1.85225582e+00  1.53263772e+00\n",
+            " -1.28469467e+00  9.19394875e+00  4.08038664e+00  2.09135413e+00\n",
+            "  2.07453203e+00  1.70901978e+00  1.43098521e+00  9.86225605e+00\n",
+            " -4.12779570e-01  1.43863606e+00  1.85985219e+00  1.33126366e+00\n",
+            "  4.79562712e+00  1.33973942e+01 -7.02914143e+00  2.19384208e-01\n",
+            "  1.55752969e+00  7.21364737e-01  5.56293964e-01 -1.16426635e+00\n",
+            " -6.85531199e-01  3.07499468e-01  1.48416829e+00  8.87502909e-01\n",
+            " -9.38504413e-02 -1.88772790e-02 -2.48243332e-01  3.21639866e-01\n",
+            "  1.47315443e+00  8.82994473e-01 -9.38504413e-02 -1.88772790e-02\n",
+            " -2.48243332e-01 -2.33707488e-01  9.69471097e-01 -8.92588556e-01\n",
+            " -6.16614962e+00  8.21757698e+00  1.96522319e+00 -6.19698048e-01\n",
+            "  1.07453454e+00 -2.87702537e+00 -4.06325006e+00  5.12276840e+00\n",
+            "  6.14237738e+00 -7.10979283e-01  1.19586551e+00 -3.05894423e+00\n",
+            " -3.34514427e+00  5.12104845e+00  5.21938944e+00 -1.31575680e+00\n",
+            "  1.61570191e+00  8.12215567e-01  3.59095311e+00 -1.54238176e+00\n",
+            "  6.78022242e+00 -2.10834074e+00  1.51376736e+00  1.71088815e+00\n",
+            "  7.24456310e+00 -1.49284124e+00  5.69624519e+00 -2.90736604e+00\n",
+            "  1.17661011e+00  2.63873935e+00  7.24456310e+00 -1.49284124e+00\n",
+            "  5.69624519e+00]\n",
+            "-38.57949447631836\n",
+            "89.85617065429688\n",
+            "tensor([-0.1786,  0.9833, -0.1976,  0.1589,  0.8825,  0.1634,  0.9112,  0.7535,\n",
+            "         0.1907, -0.3652,  0.4352,  0.6703,  0.4873, -0.0617,  1.0199,  0.5427,\n",
+            "        -0.4541,  0.5085,  0.2986,  0.4231, -0.7210,  0.9248,  0.5024, -1.9098,\n",
+            "        -0.3936, -0.0658,  0.2066,  0.5293, -0.8945, -0.6814, -1.2229, -0.2765,\n",
+            "        -0.5912,  0.0289,  1.0617, -0.7923, -0.2257, -0.8184, -0.2523, -0.6961,\n",
+            "         0.2454,  0.4369, -0.7180, -0.3354,  0.1669,  0.6362,  0.0824, -1.2304,\n",
+            "        -0.2518,  1.5042,  1.1690,  0.2118,  0.7318, -0.6064, -1.3006,  1.1235,\n",
+            "        -1.1744, -1.2724,  0.0223,  0.7181, -0.8302, -1.3006,  1.1235, -1.1744,\n",
+            "        -1.2724,  0.7168,  2.1606, -0.2597, -2.7445,  1.2013, -0.5955,  1.4717,\n",
+            "         0.9676,  2.5418, -0.5214, -0.9156,  0.9513,  0.1298,  1.7017,  1.0692,\n",
+            "         2.9028, -0.6721, -1.5308, -0.4065, -0.4475,  1.7743, -0.8859,  0.8015,\n",
+            "         0.4553, -1.0373,  0.6677,  0.8460,  0.2302, -0.9779,  0.6692,  0.1714,\n",
+            "        -0.3994, -1.4160,  0.7130, -0.4131, -0.7949,  0.4482,  0.3624, -0.3994,\n",
+            "        -1.4160,  0.7130, -0.4131,  0.6855,  1.4465,  0.5892, -1.9855, -0.1726,\n",
+            "         1.4764, -0.5352,  1.4553, -0.0864, -0.5344, -0.0539,  0.8846, -0.9773,\n",
+            "         0.9791, -0.2191, -2.3711, -0.0466,  0.4057,  2.4234,  1.2747,  1.2428,\n",
+            "        -0.1465,  1.2974,  0.6847,  1.4498,  0.9841,  1.0813,  0.6247,  1.4325,\n",
+            "         0.0585,  1.0686,  0.7070,  0.6333,  0.8581,  1.0968, -0.9092, -0.6577,\n",
+            "         0.8805,  0.1047, -0.1407, -1.1618,  0.0431, -0.2539,  0.3833,  0.1186,\n",
+            "        -0.2409, -0.7440,  0.2092, -0.2111,  0.2742,  0.1312, -0.2409, -0.7440,\n",
+            "         0.2092,  0.0316,  0.7799, -0.9907, -2.1034,  1.1569,  0.5202, -0.3546,\n",
+            "         0.8730, -2.9486, -1.4890,  0.2360,  1.2195, -0.4804,  1.0165, -3.3834,\n",
+            "        -0.7811,  0.0794,  0.9313, -0.1613,  1.1458,  0.3921,  0.3519, -0.8879,\n",
+            "         1.6047, -0.3364,  0.9013,  0.8561,  0.7105, -0.6280,  1.3501, -0.6370,\n",
+            "         0.7038,  1.0928,  0.7105, -0.6280,  1.3501])\n",
+            "-15.005530702660629\n",
+            "12.126878124784113\n"
+          ]
+        }
+      ],
       "source": [
         "# check correct scaling\n",
         "idx = random.randint(0, dataset_len)\n",
@@ -307,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 12,
       "id": "56a9ee4c",
       "metadata": {},
       "outputs": [
@@ -356,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 13,
       "id": "94873ce1",
       "metadata": {},
       "outputs": [
@@ -425,7 +503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 14,
       "id": "09e78876",
       "metadata": {},
       "outputs": [],
@@ -554,7 +632,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 15,
       "id": "1d8a59c8",
       "metadata": {},
       "outputs": [
@@ -562,7 +640,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 2000/2000 [05:26<00:00,  6.13it/s, train=0.00328, validation=0.00429]"
+            "100%|██████████| 2000/2000 [01:59<00:00, 16.69it/s, train=0.00102, validation=0.00173]"
           ]
         },
         {
@@ -571,8 +649,8 @@
           "text": [
             "###############################################################################\n",
             "\n",
-            "Train Loss: 0.0032776669461534107\n",
-            "Validation Loss: 0.004287409629406673\n",
+            "Train Loss: 0.0010223426559770649\n",
+            "Validation Loss: 0.0017293316777795553\n",
             "###############################################################################\n",
             "\n"
           ]
