little fix, and save loss

--- a/training/Trainer..ipynb
+++ b/training/Trainer..ipynb
@@ -10,7 +10,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 31,
       "id": "b09a0b12",
       "metadata": {
         "id": "b09a0b12"
@@ -20,8 +20,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "device: cpu\n",
-            "root: /home/leeoos/Projects/master/airo-rl/acrobatic-agents\n"
+            "device: cuda\n",
+            "root: /home/bitfra/Desktop/Francesco/rl_project/acrobatic-agents\n"
           ]
         }
       ],
@@ -79,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 32,
       "id": "0558881a",
       "metadata": {},
       "outputs": [
@@ -87,15 +87,15 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Task type: jump\n",
-            "Observations: (20000, 197)\n",
-            "Actions: (20000, 36)\n"
+            "Task type: mixed\n",
+            "Observations: (40000, 197)\n",
+            "Actions: (40000, 36)\n"
           ]
         }
       ],
       "source": [
         "# Classic: Import data and build dataloader\n",
-        "experimental = False\n",
+        "experimental = True\n",
         "\n",
         "availables_tasks = {\n",
         "    0: 'backflip', \n",
@@ -105,8 +105,8 @@
         "\n",
         "if not experimental: \n",
         "\n",
-        "    task_type = availables_tasks[2]\n",
-        "    dataset_len = 20000\n",
+        "    task_type = availables_tasks[0] #insert here\n",
+        "    dataset_len = 5000\n",
         "    import_dir = root_dir+'/data/'+ task_type + '/'\n",
         "    raw_expert_observations = np.load(import_dir+'/expert-observations-'+str(dataset_len)+'.npy', allow_pickle=True)\n",
         "    expert_actions = np.load(import_dir+'expert-actions-'+str(dataset_len)+'.npy', allow_pickle=True)\n",
@@ -141,11 +141,11 @@
         "    raw_expert_observations_bf = raw_expert_observations_bf\n",
         "    expert_actions_bf = expert_actions_bf\n",
         "\n",
-        "    raw_expert_observations_sk = raw_expert_observations_sk[:10000]\n",
-        "    expert_actions_sk = expert_actions_sk[:10000]\n",
+        "    raw_expert_observations_sk = raw_expert_observations_sk\n",
+        "    expert_actions_sk = expert_actions_sk\n",
         "\n",
-        "    raw_expert_observations_jp = raw_expert_observations_jp[:5000]\n",
-        "    expert_actions_jp = expert_actions_jp[:5000]\n",
+        "    raw_expert_observations_jp = raw_expert_observations_jp[:0]\n",
+        "    expert_actions_jp = expert_actions_jp[:0]\n",
         "\n",
         "    dataset_len = len(raw_expert_observations_bf) + len(raw_expert_observations_sk) + len(raw_expert_observations_jp)\n",
         "\n",
@@ -168,10 +168,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 35,
       "id": "dbe93baa",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['/home/bitfra/Desktop/Francesco/rl_project/acrobatic-agents/data/mixed/scaler-40000.joblib']"
+            ]
+          },
+          "execution_count": 35,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Robust scaling\n",
         "\n",
@@ -186,7 +197,7 @@
         "save_dir = root_dir+'/data/'+str(task_type)+'/'\n",
         "if not os.path.exists(save_dir):\n",
         "  os.makedirs(save_dir)\n",
-        "# joblib.dump(scaler, save_dir+'scaler-'+str(dataset_len)+'.joblib')  \n"
+        "joblib.dump(scaler, save_dir+'scaler-'+str(dataset_len)+'.joblib')  \n"
       ]
     },
     {
@@ -199,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 36,
       "id": "ce03945f",
       "metadata": {
         "id": "ce03945f"
@@ -218,7 +229,6 @@
         "    def __getitem__(self, idx):\n",
         "        # return (self.observations[index], self.actions[index])\n",
         "        # normalized_observations = 2 * ((self.observations[idx] - self.observations.min()) / (self.observations.max() - self.observations.min())) - 1\n",
-        "        # normalized_actions = 2 * ((self.actions[idx] - self.actions.min()) / (self.actions.max() - self.actions.min())) - 1\n",
         "        # normalized_data = (normalized_observations, self.actions[idx])\n",
         "        # return normalized_data\n",
         "        return self.observations[idx], self.actions[idx]\n",
@@ -241,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 26,
       "id": "11af5407",
       "metadata": {
         "colab": {
@@ -255,12 +265,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Expert actions len: 20000\n",
-            "Expert observations len: 20000\n",
+            "Expert actions len: 5000\n",
+            "Expert observations len: 5000\n",
             "Discarded form np: 0\n",
             "Discarded form torch: 0\n",
-            "Observations min: -456.31927490234375\n",
-            "Observations max: 585.9951782226562\n"
+            "Observations min: -34.504180908203125\n",
+            "Observations max: 31.392112731933594\n"
           ]
         }
       ],
@@ -306,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 27,
       "id": "56a9ee4c",
       "metadata": {},
       "outputs": [
@@ -355,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 28,
       "id": "94873ce1",
       "metadata": {},
       "outputs": [
@@ -424,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 29,
       "id": "09e78876",
       "metadata": {},
       "outputs": [
@@ -476,6 +486,8 @@
         "    unused_val = 0\n",
         "\n",
         "    with tqdm(total=train_epochs, leave=True) as pbar:\n",
+        "        losses = np.empty(train_epochs)\n",
+        "        v_losses = np.empty(train_epochs)\n",
         "        for epoch in range(train_epochs):\n",
         "            for batch_idx, (data, target) in enumerate(train_loader):\n",
         "\n",
@@ -537,6 +549,8 @@
         "            v_loss = validation(val_loader, policy, loss_criterion)\n",
         "            epoch_loss = 0\n",
         "            unused_val = 0\n",
+        "            v_losses[epoch]=v_loss\n",
+        "            losses[epoch]=t_loss\n",
         "            pbar.set_postfix(train=t_loss, validation=v_loss)\n",
         "            pbar.update(1)\n",
         "            \n",
@@ -546,6 +560,8 @@
         "        print(\"Validation Loss: {}\".format(v_loss))\n",
         "        print(\"###############################################################################\\n\")\n",
         "\n",
+        "    np.save('t_losses.npy', np.array(losses, dtype=object), allow_pickle=True)\n",
+        "    np.save('v_losses.npy', np.array(v_losses, dtype=object), allow_pickle=True)\n",
         "\n",
         "def validation(loader, policy,loss_criterion):\n",
         "    policy.eval()\n",
@@ -590,7 +606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 30,
       "id": "b1944c35",
       "metadata": {},
       "outputs": [
@@ -598,7 +614,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 2000/2000 [02:33<00:00, 13.01it/s, train=0.000954, validation=0.00139]"
+            "100%|██████████| 2000/2000 [09:26<00:00,  3.53it/s, train=0.00959, validation=0.0116]"
           ]
         },
         {
@@ -607,8 +623,8 @@
           "text": [
             "###############################################################################\n",
             "\n",
-            "Train Loss: 0.0009538738819008524\n",
-            "Validation Loss: 0.001388851276715286\n",
+            "Train Loss: 0.009590784985838192\n",
+            "Validation Loss: 0.011627394240349531\n",
             "###############################################################################\n",
             "\n"
           ]
@@ -631,6 +647,37 @@
         "      scheduler=scheduler,\n",
         "      thrashold = 100\n",
         "    )"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "1dba6867",
+      "metadata": {},
+      "source": [
+        "# Load losses"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "id": "742a9a6a",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0.5208802563803536 0.2388148813375405 0.1748882005257266 ...\n",
+            " 0.0022322552977129817 0.0022232015035115182 0.002213615599820124]\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Load losses\n",
+        "ta = np.load('t_losses.npy',allow_pickle=True)\n",
+        "tva = np.load('v_losses.npy',allow_pickle=True)\n",
+        "\n",
+        "print(ta)"
       ]
     },
     {
