--- a/training/Trainer.ipynb
+++ b/training/Trainer.ipynb
@@ -660,7 +660,7 @@
       "id": "1dba6867",
       "metadata": {},
       "source": [
-        "# Load losses"
+        "## Load losses"
       ]
     },
     {
